--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.13.12",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "multer-s3": "^2.7.0"
+    "multer-s3": "^2.7.0",
+    "normalize-port": "^1.0.0"
   }
 }
